Trying to fix hosted events image on mobile

--- a/less/agency.less
+++ b/less/agency.less
@@ -581,6 +581,9 @@ aside.clients {
 
 section#contact {
   background: @gray-darkest url('../img/map-image.png') no-repeat center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover;
   .section-heading {
 	color: white;
@@ -773,6 +776,9 @@ ul.social-buttons {
   background: -o-linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../img/build/drama-center-2.jpg') no-repeat fixed top center; /* Opera 11.10+ */
   background: -ms-linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../img/build/drama-center-2.jpg') no-repeat fixed top center; /* IE10+ */
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../img/build/drama-center-2.jpg') no-repeat fixed top center; /* W3C */
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover;
   color: #FFF;
 //  border: 2px solid #e7e7e7;
